# JARVIS

./: .gitignore  Block 3 – Add a stop() method at the end of the file  CLAUDE.md  README.md  audio_handler.py  check_cuda.py  cuda_setup.py  main.py  pyproject.toml  pyproject.toml.bak  test_audio_handler.py  tmp.txt  voice_transcription_shortcut.py
ai/: __init__.py  openai_wrapper.py
commands/: __init__.py  command_library.py
config/: settings.py
cuda_utils/: README.md  capture_cuda_info.py  cuda_results.txt  cuda_setup.py  direct_install_pytorch_cuda.py  install_pytorch_cuda.py  setup_pytorch_cuda_env.py  simple_cuda_check.py  test_cuda_direct.py  verify_cuda.py
docs/: CUDA_SETUP.md
jarvis/: state.py
jarvis/ai/: openai_wrapper.py
jarvis/audio/: __init__.py  audio_handler.py
jarvis/commands/: command_library.py
jarvis/services/: transcription_worker.py
jarvis/ui/: __init__.py  controller.py  interfaces.py  popup_dialog.py  print_handler.py
jarvis/ui/workers/: stream_worker.py
planning/: Refactor_Plan.md
scripts/: README.md  __init__.py  build.py  clean.py  list_scripts.py  release.py  voice_transcription_shortcut.py
services/: __init__.py  transcription_worker.py
tests/: __init__.py  test_audio_handler.py
ui/: popup_dialog.py  print_handler.py
ui/workers/: stream_worker.py
